socials z-index fix

--- a/src/styles/layout/contact.scss
+++ b/src/styles/layout/contact.scss
@@ -13,6 +13,7 @@
     color: abs.$color-white;
   }
   &__socials{
+    z-index: 2;
     display: flex;
     align-items: center;
     gap: 2rem;
